# recommender-system

./: .gitignore  README.md  cluster_list.pkl  movie_list.pkl  pyproject.toml
notebooks/: example.ipynb
src/: main.py
